package binance

import (
	"context"
	"time"

	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
)

// Client implements ExchangeClient interface for Binance
type Client struct {
	apiKey    string
	apiSecret string
	baseURL   string
	sandbox   bool
}

// Config holds Binance client configuration
type Config struct {
	APIKey    string
	APISecret string
	Sandbox   bool
}

// Balance represents account balance for an asset
type Balance struct {
	Asset  string
	Free   float64
	Locked float64
}

// Order represents a trading order
type Order struct {
	OrderID       string
	Symbol        string
	Side          string // BUY, SELL
	Type          string // MARKET, LIMIT
	Price         float64
	Quantity      float64
	ExecutedQty   float64
	Status        string
	TimeInForce   string
	CreatedAt     time.Time
	UpdatedAt     time.Time
}

// Trade represents a completed trade
type Trade struct {
	TradeID   string
	OrderID   string
	Symbol    string
	Side      string
	Price     float64
	Quantity  float64
	Fee       float64
	FeeAsset  string
	Timestamp time.Time
}

// NewClient creates a new Binance exchange client
func NewClient(cfg Config) *Client {
	baseURL := "https://api.binance.com"
	if cfg.Sandbox {
		baseURL = "https://testnet.binance.vision"
	}

	return &Client{
		apiKey:    cfg.APIKey,
		apiSecret: cfg.APISecret,
		baseURL:   baseURL,
		sandbox:   cfg.Sandbox,
	}
}

// GetAccountBalances retrieves all account balances
func (c *Client) GetAccountBalances(ctx context.Context, accountID string) ([]Balance, error) {
	return nil, status.Error(codes.Unimplemented, "GetAccountBalances not implemented")
}

// GetAssetBalance retrieves balance for a specific asset
func (c *Client) GetAssetBalance(ctx context.Context, accountID string, asset string) (*Balance, error) {
	return nil, status.Error(codes.Unimplemented, "GetAssetBalance not implemented")
}

// PlaceOrder creates a new order
func (c *Client) PlaceOrder(ctx context.Context, accountID string, order *Order) (*Order, error) {
	return nil, status.Error(codes.Unimplemented, "PlaceOrder not implemented")
}

// CancelOrder cancels an existing order
func (c *Client) CancelOrder(ctx context.Context, accountID string, orderID string, symbol string) error {
	return status.Error(codes.Unimplemented, "CancelOrder not implemented")
}

// GetOrder retrieves order details
func (c *Client) GetOrder(ctx context.Context, accountID string, orderID string, symbol string) (*Order, error) {
	return nil, status.Error(codes.Unimplemented, "GetOrder not implemented")
}

// GetOpenOrders retrieves all open orders
func (c *Client) GetOpenOrders(ctx context.Context, accountID string, symbol string) ([]Order, error) {
	return nil, status.Error(codes.Unimplemented, "GetOpenOrders not implemented")
}

// GetOrderHistory retrieves order history
func (c *Client) GetOrderHistory(ctx context.Context, accountID string, symbol string, limit int) ([]Order, error) {
	return nil, status.Error(codes.Unimplemented, "GetOrderHistory not implemented")
}

// GetTradeHistory retrieves trade history
func (c *Client) GetTradeHistory(ctx context.Context, accountID string, symbol string, limit int) ([]Trade, error) {
	return nil, status.Error(codes.Unimplemented, "GetTradeHistory not implemented")
}

// GetSymbolPrice retrieves current price for a trading pair
func (c *Client) GetSymbolPrice(ctx context.Context, symbol string) (float64, error) {
	return 0, status.Error(codes.Unimplemented, "GetSymbolPrice not implemented")
}

// ValidateAccount verifies account credentials and permissions
func (c *Client) ValidateAccount(ctx context.Context, accountID string) error {
	return status.Error(codes.Unimplemented, "ValidateAccount not implemented")
}
